--- a/config
+++ b/config
@@ -194,6 +194,9 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
         position bottom
+        colors {
+        background #3c3836
+        }
 }
 
 
