--- a/i3status.config
+++ b/i3status.config
@@ -5,9 +5,11 @@ general {
 order += "tztime local"
 order += "battery 1"
 order += "cpu_temperature 0"
+order += "cpu_temperature 1"
 order += "memory"
 order += "load"
 order += "disk /"
+order += "volume master"
 
 wireless wlan1 {
         format_up = "W: (%quality at %essid, %bitrate) %ip"
@@ -59,6 +61,10 @@ load {
 
 cpu_temperature 0 {
         format = "T: %degrees °C"
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input"
+}
+cpu_temperature 1 {
+        format = "T: %degrees °C"
         path = "/sys/devices/platform/coretemp.0/hwmon/hwmon5/temp1_input"
 }
 
@@ -74,4 +80,11 @@ disk "/" {
 
 read_file uptime {
         path = "/proc/uptime"
+}
+volume master {
+        format = "♪: %volume"
+        format_muted = "♪: muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
